// Copyright 2021 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.system.v1alpha;

import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "wfa/measurement/system/v1alpha/computation_log_entry.proto";

option java_package = "org.wfanet.measurement.system.v1alpha";
option java_multiple_files = true;
option java_outer_classname = "ComputationLogEntriesServiceProto";

// Kingdom system API service for interacting with `ComputationLogEntry`
// resources.
service ComputationLogEntries {
  // Creates a new `ComputationLogEntry`.
  //
  // Note that this cannot be used to log permanent errors. Instead, the
  // `FailComputationParticipant` method should be used to indicate a failure.
  rpc CreateComputationLogEntry(CreateComputationLogEntryRequest)
      returns (ComputationLogEntry) {
    option (google.api.method_signature) = "parent,computation_log_entry";
  }
}

// Request message for the `CreateComputationLogEntry` method.
message CreateComputationLogEntryRequest {
  // Resource name of the parent `ComputationParticipant`.
  string parent = 1 [
    (google.api.resource_reference).type =
        "halo-system.wfanet.org/ComputationParticipant",
    (google.api.field_behavior) = REQUIRED
  ];

  // The `ComputationLogEntry` to create.
  //
  // The `name` field will be ignored, and the system will assign an ID.
  ComputationLogEntry computation_log_entry = 2
      [(google.api.field_behavior) = REQUIRED];
}
